--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Ajax Project</title>
 </head>
 <body>
-	
+	<h1>Good Work</h1>
 </body>
 </html>
