set the multipule city option

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,8 @@
 	<div class="container">
     <div class="row">
     <div class="col">
-     <button type="button" id="getInfoBtn" class="btn btn-secondary btn-lg btn-block btn-get-info">Click here to get Latest Information of Weather</button>
+     <input class="form-control" placeholder="Enter City Name" type="text" id="city">
+     <button type="button" id="getInfoBtn" class="btn btn-secondary btn-lg btn-block btn-get-info">Enter City to get Latest Information of Weather</button>
     </div>
     </div>
     <div class="row">
@@ -25,10 +26,12 @@
 	</div>
 	<div class="col-md-6 card-main" id="colDiv">
     
+
 	</div>
     </div>
     <div class="row" id="card-detail">
     	
+
     </div>
   </div>
 
